@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.sarpur"
        name="Sarpur"
-       version="3.1.3"
+       version="3.2.0"
        provider-name="Dagur Páll Ammendrup">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
-    <import addon="script.module.html5lib" version="0.999"/>
+    <import addon="script.module.beautifulsoup4" version="4.3.2"/>
     <import addon="script.module.simplejson" version="2.0.10"/>
     <import addon="script.module.requests" version="2.3.0"/>
   </requires>
